<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="get_ready">Get ready</string>
    <string name="title_text">Title text</string>
    <string name="go">Go</string>
    <string name="you_scored">You scored</string>
    <string name="got_it">got it</string>
    <string name="skip">Skip</string>
    <string name="end_game">End game</string>
    <string name="the_word_is">The Word is</string>
</resources>